--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       <div class="bottom">
 
         <input onchange="myFunction(this.value,this.id)" class="form-control" type="text" placeholder="First Name"
-          name="fname" id="fname" required>
+          id="fname" required>
         <input onchange="myFunction(this.value,this.id)" class="form-control" type="text" placeholder="Last Name"
-          name="lname" id="lname" required>
-        <input onchange="myFunction(this.value,this.id)" class="form-control" type="email" name="email"
-          placeholder="Email Address" id="email">
+          id="lname" required>
+        <input onchange="myFunction(this.value,this.id)" class="form-control" type="email" placeholder="Email Address"
+          id="email">
 
         <input onchange="myFunction(this.value,this.id)" class="form-control" type="password" placeholder="Password"
-          name="psw" id="psw" required>
+          id="psw" required>
 
         <button>Claim Your Free Trail</button>
       </div>
